@@ -1,25 +1,0 @@
-.button-select {
-  &__option {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-
-    background-color: $color-white;
-    border-color: $color-teal;
-    color: $color-grey-1;
-
-    &--selected {
-      background-color: $color-teal;
-      color: $color-white;
-    }
-
-    @media (forced-colors: active) {
-      background-color: SelectedItem;
-    }
-  }
-}
-
-.button-select .button-select__option {
-  /* override default margin from horizontally-aligned buttons */
-  margin-inline-start: 0;
-}
