@@ -155,7 +155,6 @@ These are classes for components.
 @import 'components/link.legacy';
 @import 'components/indicator';
 @import 'components/status-tag';
-@import 'components/button-select';
 @import 'components/skiplink';
 @import 'components/workflow-tasks';
 @import 'components/workflow-timeline';
