@@ -53,6 +53,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
  * Prevent duplicate addition of StreamField blocks with the new block picker (Deepam Priyadarshi)
  * Enable partial search on images and documents index view where available (Mng)
+ * Adopt a no-JavaScript and more accessible solution for option selection in reporting, using HTML only `radio` input fields (Mehul Aggarwal)
 
 ### Documentation
 
